Fixed import errors.

--- a/etc/portvcs.yaml
+++ b/etc/portvcs.yaml
@@ -1,8 +1,1 @@
---- 
-:host: localhost
-:port: 2401
-:user: anonymous
-:pass: anoncvs
-:cvsroot: /usr/local/cvsroot
-:ports_tree: ''
-
+fr.FreeBSD.org.yaml
